tests/good/typing/046-annoted-fun-case-pzero.clap
** string -> int
val f = fun (x : string) => case { 0 => 42 }
