tests/bad/typing/022-fun-bad-arrow-type-right.clap
** int -> int != int -> string
val f : (int -> int) = fun (x : int) => "42"
